--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-inverse" role="navigation" style="padding-left:130px;">
          <ul class="nav navbar-nav">
+          <li> <a class="navbar-brand" href="#">Mongo Login</a></li>
         <li><a href="/">Home</a></li>
         <li><a href="/about">About us</a></li>
         <li class="active"><a href="/post">Post<span class="sr-only">(current)</span></a></li>
